--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta name="description" content="Convert the given Datadog JSON to Terraform format." />
         <link rel="apple-touch-icon" href="logo192.png" />
         <link rel="manifest" href="manifest.json" />
         <script src="https://kit.fontawesome.com/f1becbb03f.js"></script>
