Added Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,17 @@
         <meta name="description" content="Convert the given Datadog JSON to Terraform format." />
         <link rel="apple-touch-icon" href="logo192.png" />
         <link rel="manifest" href="manifest.json" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170803034-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-170803034-1');
+        </script>
         <script src="https://kit.fontawesome.com/f1becbb03f.js"></script>
         <title>Datadog to Terraform</title>
     </head>
